--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
+    "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.12.1",
     "react-toastify": "^9.1.3",
     "swr": "^2.1.5",
