--- a/package.json
+++ b/package.json
@@ -10,18 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@icon-park/react": "^1.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tanstack/react-table": "^8.9.2",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "firebase": "^9.22.2",
+    "framer-motion": "^10.12.16",
+    "lucide-react": "^0.244.0",
     "react": "^18.2.0",
     "react-auth-code-input": "^3.2.1",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
+    "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.12.1",
     "react-toastify": "^9.1.3",
     "swr": "^2.1.5",
-    "universal-cookie": "^4.0.4"
+    "tailwind-merge": "^1.13.1",
+    "tailwindcss-animate": "^1.0.6",
+    "universal-cookie": "^4.0.4",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
