--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-pro-sidebar": "^1.1.0-alpha.1",
     "react-router-dom": "^6.12.1",
+    "react-tailwindcss-select": "^1.8.5",
     "react-toastify": "^9.1.3",
     "swr": "^2.1.5",
     "tailwind-merge": "^1.13.2",
