--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "zustand": "^4.3.8"
   },
   "devDependencies": {
+    "@types/node": "^20.4.1",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
